# extructures

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CoqMakefile.local  LICENSE  MIGRATION.md  Make  Makefile  README  README.md  _CoqProject  extructures.opam  flake.nix  hseq.v  partmaps.v  words.v
.circleci/: config.yml
tests/: tutorial.v
theories/: ffun.v  fmap.v  fperm.v  fset.v  hseq.v  nominal.v  ord.v  partmap.v  string.v  void.v  word.v
