synopsis: "Finite sets, maps, and other data structures with extensional reasoning"
name: "coq-extructures"
opam-version: "2.0"
version: "dev"
maintainer: "arthur.aa@gmail.com"
homepage: "https://github.com/arthuraa/extructures"
dev-repo: "git+https://github.com/arthuraa/extructures.git"
bug-reports: "https://github.com/arthuraa/extructures/issues"
authors: ["Arthur Azevedo de Amorim"]
license: "MIT"
build: [
  [make "-j" "%{jobs}%"]
]
run-test: [
  [make "-j" "%{jobs}%" "test"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "coq" {(>= "8.17" & < "8.21~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "2.0.0") | (= "dev")}
  "coq-deriving" {(>= "0.2.0") | (= "dev")}
]
tags: [
  "keyword:finite maps"
  "keyword:extensionality"
  "category:Computer Science/Data Types and Data Structures"
  "logpath:extructures"
]
